8328010: [lworld] C1 assertion failure in LIRAssembler::patching_epilog
Reviewed-by: thartmann